--- a/app/src/main/res/layout/backpackcard.xml
+++ b/app/src/main/res/layout/backpackcard.xml
@@ -1,16 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="20dp"
-    android:padding="50dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
+        android:id="@+id/card"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/backpack_card_bg"
         app:cardCornerRadius="10dp"
-        app:cardElevation="20dp" />
+        app:cardElevation="5dp"
+        app:cardUseCompatPadding="true"
+        >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/backpack_card_bg"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/sneakerName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:text="dark smoke"/>
+        <TextView
+            android:id="@+id/sneakerType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="legendary"
+            android:textColor="@color/white"
+            android:background="#F44336"/>
+        <ImageView
+            android:id="@+id/sneakerImage"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:scaleType="fitCenter"
+            android:src="@drawable/darksmoke"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:src="@drawable/bar"/>
+        <TextView
+            android:id="@+id/coin"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="20"/>
+    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
