--- a/app/src/main/res/layout/fragment_bagpack.xml
+++ b/app/src/main/res/layout/fragment_bagpack.xml
@@ -4,11 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="20dp"
-    android:background="@drawable/chip_round_corners"
     tools:context=".Backpack">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/backpackGrid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
 </FrameLayout>
