--- a/app/src/main/res/layout/backpackcard.xml
+++ b/app/src/main/res/layout/backpackcard.xml
@@ -19,35 +19,57 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/sneakerName"
+            android:id="@+id/sneakerName1"
+            android:paddingTop="15dp"
+            android:paddingLeft="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:text="dark smoke"/>
+            android:textStyle="bold"
+            android:text=""/>
+        <TextView
+            android:id="@+id/sneakerName2"
+            android:paddingBottom="5dp"
+            android:paddingLeft="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:text=""/>
         <TextView
             android:id="@+id/sneakerType"
+            android:padding="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="legendary"
             android:textColor="@color/white"
+            android:textStyle="bold"
             android:background="#F44336"/>
+
         <ImageView
             android:id="@+id/sneakerImage"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="120dp"
             android:layout_gravity="center"
             android:scaleType="fitCenter"
             android:src="@drawable/darksmoke"/>
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:src="@drawable/bar"/>
-        <TextView
-            android:id="@+id/coin"
-            android:textColor="@color/black"
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="20"/>
+            android:layout_marginBottom="5dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:src="@drawable/bar"/>
+            <TextView
+                android:id="@+id/coin"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="20"/>
+        </FrameLayout>
     </LinearLayout>
     </androidx.cardview.widget.CardView>
 
