sneaker count and 3d card click prelimnary

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,15 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/bottom_nav_dashboard"
-        android:title="Dashboard"
-        android:icon="@drawable/baseline_perm_identity_24"
-        app:cnb_textColor="@color/black"
+        android:id="@+id/bottom_nav_trade"
+        android:title="Games"
+        android:icon="@drawable/baseline_videogame_asset_24"
         app:cnb_iconColor="@color/black"
+        app:cnb_textColor="@color/black"
         app:cnb_backgroundColor="#ffffff"/>
+
     <item
         android:id="@+id/bottom_nav_leaderboards"
-        android:title="Leaderboards"
+        android:title="Ranks"
         android:icon="@drawable/baseline_leaderboard_24"
         app:cnb_iconColor="@color/black"
         app:cnb_textColor="@color/black"
@@ -23,19 +24,20 @@
         app:cnb_textColor="@color/black"
         app:cnb_iconColor="@color/black"
         app:cnb_backgroundColor="#ffffff"/>
-    <item
-        android:id="@+id/bottom_nav_trade"
-        android:title="Trade"
-        android:icon="@drawable/baseline_attach_money_24"
-        app:cnb_iconColor="@color/black"
-        app:cnb_textColor="@color/black"
-        app:cnb_backgroundColor="#ffffff"/>
+
     <item
         android:id="@+id/bottom_nav_cam"
         android:title="Cam"
         android:icon="@drawable/baseline_photo_camera_24"
         app:cnb_iconColor="@color/black"
         app:cnb_textColor="@color/black"
+        app:cnb_backgroundColor="#ffffff"/>
+    <item
+        android:id="@+id/bottom_nav_dashboard"
+        android:title="Profile"
+        android:icon="@drawable/baseline_perm_identity_24"
+        app:cnb_textColor="@color/black"
+        app:cnb_iconColor="@color/black"
         app:cnb_backgroundColor="#ffffff"/>
 
 </menu>
