--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -8,11 +8,13 @@
     android:orientation="vertical"
     tools:context=".Fragments.DashboardFragment">
 
-    <ImageView
-        android:layout_width="match_parent"
+    <ImageButton
+        android:id="@+id/avatar"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="10dp"
+        android:padding="0dp"
         android:src="@drawable/demo_user"/>
     <com.ismaeldivita.chipnavigation.ChipNavigationBar
         android:id="@+id/nav"
