--- a/app/src/main/res/layout/backpackcard.xml
+++ b/app/src/main/res/layout/backpackcard.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
@@ -53,24 +54,42 @@
             android:layout_gravity="center"
             android:scaleType="fitCenter"
             android:src="@drawable/darksmoke"/>
-        <FrameLayout
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp">
+            android:paddingHorizontal="5dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal">
             <ImageView
                 android:id="@+id/tryonButton"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:src="@drawable/bar"/>
-            <TextView
-                android:id="@+id/coin"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="20"/>
-        </FrameLayout>
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:padding="5dp"
+                android:layout_height="match_parent"
+                android:scaleType="fitCenter"
+                android:visibility="gone"
+                android:src="@drawable/camera_button"/>
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_weight="3"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:src="@drawable/bar"/>
+                <TextView
+                    android:id="@+id/coin"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="20"/>
+            </FrameLayout>
+        </LinearLayout>
     </LinearLayout>
     </androidx.cardview.widget.CardView>
 
