--- a/app/src/main/res/layout/leaderboardcard.xml
+++ b/app/src/main/res/layout/leaderboardcard.xml
@@ -3,50 +3,52 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="30dp"
-        android:backgroundTint="@android:color/transparent"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="20dp">
+    android:layout_height="wrap_content"
+    android:paddingTop="15dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#5C000000"
+            android:background="@color/white"
             android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/rank"
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingVertical="10dp"
-                android:paddingHorizontal="20dp"
-                android:textColor="@color/white"
-                android:text="1"/>
             <TextView
                 android:id="@+id/user"
                 android:layout_width="0dp"
                 android:textStyle="bold"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_gravity="left"
                 android:text="user"
-                android:padding="10dp"/>
+                android:paddingHorizontal="10dp"/>
+            <ImageView
+                android:id="@+id/crown"
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+            <TextView
+                android:id="@+id/rank"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingHorizontal="20dp"
+                android:textColor="#6E6A6A"
+                android:text="Rank 1"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/steps"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="steps"
-                android:paddingVertical="10dp"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:paddingHorizontal="20dp"/>
-
+                android:text="Coins : 0"
+                android:paddingHorizontal="10dp"
+                android:textColor="#6E6A6A"/>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+        <View
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_height="2dp"
+            android:background="#FFC8C6C6"/>
 </LinearLayout>
