--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -7,15 +7,31 @@
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".Fragments.DashboardFragment">
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="0dp"
+    android:layout_gravity="center"
+    android:layout_weight="1">
 
     <ImageButton
-        android:id="@+id/avatar"
+        android:id="@+id/avatar1"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:backgroundTint="@color/white"
         android:padding="0dp"
         android:src="@drawable/demo_user"/>
+    <ImageButton
+        android:id="@+id/avatar2"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:layout_height="50dp"
+        android:background="@color/white"
+        android:backgroundTint="@color/white"
+        android:padding="0dp"
+        android:src="@drawable/baseline_edit_24"/>
+</LinearLayout>
     <com.ismaeldivita.chipnavigation.ChipNavigationBar
         android:id="@+id/nav"
         android:layout_width="wrap_content"
